<resources>
    <string name="app_name">Baton</string>

    <!--  Main Activity  -->
    <string name="main_home">홈</string>
    <string name="main_search">검색</string>
    <string name="main_chatting">문의</string>
    <string name="main_mypage">마이페이지</string>

    <!--  Home Fragment  -->
    <string name="home_title_location">경기도 용인</string>
    <string name="home_banner_title_zero">더 편리하고 빠르게 거래하는</string>
    <string name="home_banner_title_one">바통 이용법을</string>
    <string name="home_banner_title_two">안내해드려요!</string>
    <string name="home_banner_see_more">자세히 보기</string>
    <string name="home_gym">헬스권</string>
    <string name="home_pt">PT이용권</string>
    <string name="home_pilates">필라테스</string>
    <string name="home_etc">기타</string>
    <string name="home_near_ticket">내 근처 양도권</string>
    <string name="home_alert_count">1</string>

    <!--  Bottom Filter Dialog  -->
    <string name="filter_reset">필터 초기화</string>
    <string name="filter_search">검색</string>
    <string name="filter_search_result">검색 (%s건)</string>

    <string name="filter_alignment">정렬 순</string>
    <string name="filter_alignment_distance">가까운 거리순</string>
    <string name="filter_alignment_low_price">낮은 가격순</string>
    <string name="filter_alignment_high_price">높은 가격순</string>
    <string name="filter_alignment_view">조회 많은순</string>
    <string name="filter_alignment_bookmark">북마크 많은순</string>
    <string name="filter_alignment_term">기간 많은순</string>

    <string name="filter_ticket_kind">양도권 종류</string>
    <string name="filter_ticket_kind_select">종류를 선택해주세요</string>
    <string name="filter_ticket_kind_explain">(복수 선택 가능)</string>
    <string name="filter_ticket_gym">헬스 회원권</string>
    <string name="filter_ticket_pt">PT 이용권</string>
    <string name="filter_ticket_pilates_yoga">필라테스 회원권</string>
    <string name="filter_ticket_etc">기타</string>

    <string name="filter_term">기간</string>
    <string name="filter_term_explain">양도권 종류를 먼저 선택해주세요.</string>
    <string name="filter_term_select">양도권 종류 선택</string>
    <string name="filter_term_times">횟수</string>
    <string name="filter_term_zero_time">0회</string>
    <string name="filter_term_all">전체</string>
    <string name="filter_term_fifty_times">50회</string>
    <string name="filter_term_remaining">남은 기간</string>
    <string name="filter_term_zero_month">0개월</string>
    <string name="filter_term_six_months">6개월</string>

    <string name="filter_price">가격</string>
    <string name="filter_price_zero">0원</string>
    <string name="filter_price_one_million_five_hundred_thousand">1,500,000</string>
    <string name="filter_price_all">전체</string>

    <string name="filter_transaction_method">거래방법</string>
    <string name="filter_transaction_method_select">거래 방식 선택</string>
    <string name="filter_transaction_method_select_face">현장결제(대면)</string>
    <string name="filter_transaction_method_select_non_face">선결제(비대면)</string>
    <string name="filter_transaction_method_cost_select_na">해당 없음</string>
    <string name="filter_transaction_method_cost_select">양도비 선택</string>
    <string name="filter_transaction_method_cost_select_seller">판매자 부담</string>
    <string name="filter_transaction_method_cost_select_consumer">구매자 부담</string>

    <string name="filter_additional_options">추가옵션</string>
    <string name="filter_additional_options_select">회원권 추가 옵션 선택</string>
    <string name="filter_additional_options_select_explain">(복수 선택 가능)</string>
    <string name="filter_additional_options_shower_room">샤워실 포함</string>
    <string name="filter_additional_options_locker_room">락카룸 포함</string>
    <string name="filter_additional_options_sport_wear">운동복 포함</string>
    <string name="filter_additional_options_gx">GX 포함</string>
    <string name="filter_additional_options_re_transfer">재양도 가능</string>
    <string name="filter_additional_options_refund">환불 가능</string>
    <string name="filter_additional_options_holding">홀딩(휴회)완료</string>
    <string name="filter_additional_options_bargaining">가격 제안 가능</string>

    <string name="filter_hashtag">해시태그</string>
    <string name="filter_hashtag_select">해시태그 선택</string>
    <string name="filter_hashtag_select_explain">(최대 3개 선택 가능)</string>
    <string name="filter_hashtag_kind_teacher">&#35;친절한 선생님</string>
    <string name="filter_hashtag_systematic_lesson">&#35;체계적인 수업</string>
    <string name="filter_hashtag_customized_care">&#35;맞춤 케어</string>
    <string name="filter_hashtag_wide_facility">&#35;넓은 시설</string>
    <string name="filter_hashtag_various_instruments">&#35;다양한 기구</string>
    <string name="filter_hashtag_new_instruments">&#35;최신 기구</string>
    <string name="filter_hashtag_crowded">&#35;사람이 많은</string>
    <string name="filter_hashtag_few_people">&#35;사람이 적은</string>
    <string name="filter_hashtag_pleasant_environment">&#35;쾌적한 환경</string>
    <string name="filter_hashtag_quiet_atmosphere">&#35;조용한 분위기</string>
    <string name="filter_hashtag_station_area">&#35;역세권</string>


    <!-- 판매글 등록-장소 등록 -->
    <string name="write_post">판매글 등록</string>
    <string name="write_post_back">이전</string>
    <string name="write_post_next">다음</string>
    <string name="place_register">장소 등록</string>
    <string name="place_register_explain">헬스장 이름이나 도로명 주소를 검색해주세요</string>
    <string name="place_register_photo">사진</string>
    <string name="place_register_photo_explain">회원권 사진을 함께 등록하면 신뢰도가 올라가요</string>
    <string name="place_register_shop_name">이름</string>
    <string name="place_register_shop_address">주소</string>

    <!-- 판매글 등록-장소 등록 -->
    <string name="membership_information">판매 회원권</string>
    <string name="membership_information_explain">(1개만 선택 가능)</string>
    <string name="membership_information_select">기간/횟수 선택</string>
    <string name="membership_information_select_fixed_term">기간제</string>
    <string name="membership_information_select_frequency_term">횟수제</string>
    <string name="membership_information_input">남은기간/횟수 입력</string>
    <string name="membership_information_price">가격</string>
    <string name="membership_information_bargaining">가격 제안 가능</string>
    <string name="membership_information_detail">추가옵션</string>
    <string name="membership_information_detail_explain">(선택사항)</string>

    <!-- 판매글 등록-거래방법-->
    <string name="transaction_method_all">둘다 가능</string>
    <string name="transaction_method_info">거래방법이 궁금해요</string>
    <string name="transaction_method_refund">양도비</string>
    <string name="transaction_method_info_answer1">현장결제</string>
    <string name="transaction_method_info_answer2">는 판매자와 구매자가 헬스장을 방문해</string>
    <string name="transaction_method_info_answer3"> 계약 내용을 확인하고 현장에서 계좌이체 하는 것을 뜻해요.</string>
    <string name="transaction_method_info_answer4">선결제</string>
    <string name="transaction_method_info_answer5">는 판매자가 미리 헬스장에 양도의사를 밝힌 후</string>
    <string name="transaction_method_info_answer6">구매자가 추후 이체 하거나 방문 전 미리 입금하는 것을 뜻해요.</string>
    <string name="transaction_method_info_answer7">*거래 방법은 개인에 따라 달라질 수 있으니 참고만 해주세요.</string>
    <string name="transaction_method_info_answer8">구매자가 방문해 계약 내용을 확인하고 계좌이체 하거나</string>
    <string name="transaction_method_info_answer9">방문 전 판매자에게 먼저 입금하는 것을 뜻해요.</string>

    <!-- 판매글 등록-설명글-->
    <string name="description">설명글</string>
    <string name="description_hint">양도 이유, 회원권 정보, 거래방법 등을\n자세히 입력하면 빠르게 판매할 수 있어요.</string>
    <string name="descriptionFormat">%1$d/100</string>
    <string name="photoSizeFormat">%1$d/5</string>
    <string name="chatNameFormat">%s님과 대화</string>

    <string name="search_option_alignment">정렬</string>
    <string name="search_option_count">%s개</string>
    <string name="search_option_all">전체</string>
    <string name="price_range">%s원 ~ %s원 이상</string>
    <string name="price_range_normal">%s원 ~ %s원</string>
    <string name="pt_term_range">%s회 ~ %s회</string>
    <string name="gym_term_range">%s개월 ~ %s개월</string>
    <string name="ticket_distance_format">%sm</string>
    <string name="ticket_price_format">%s원</string>
    <string name="ticket_remaining_day">%s일 남음</string>
    <string name="ticket_remaining_number">%s회 남음</string>
    <string name="chatHowOldFormat">%1$s일 전</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="road_address">도로명주소</string>
    <string name="locaton_permission_alert">현재 위치를 파악하기 위해 위치 권한 접근이 필요합니다</string>


    <string-array name="ticket_detail_bottomsheet_menu">
        <item name="ticket_detail_change_sales status_option">판매 상태 변경하기</item>
        <item name="ticket_detail_edit_option">수정하기</item>
        <item name="ticket_detail_delete_option">삭제하기</item>
    </string-array>

    <string-array name="ticketSaleStatus">
        <item name="ticket_status_sale">판매중</item>
        <item name="ticket_status_reserve">예약중</item>
        <item name="ticket_status_completed">거래완료</item>
    </string-array>

    <string name="sign_up">회원 가입</string>

    <string name="mypage_ticket_menu_change">정보 수정하기</string>
    <string name="mypage_ticket_menu_delete">삭제</string>

    <!--바통 이용법-->
    <string name="how_to_use_introduce1">바통은 헬스 양도권 거래 전문 플랫폼으로 내 위치를 기반으로 가까운 매물을 확인하고 판매자와 구매자가 편리하고 안전하게 양도권을 거래할 수 있는 플랫폼이에요.</string>
    <string name="how_to_use_introduce2">바통에서 더 이상 사용하지 않는 회원권은 빠르게 판매하고 평소 눈여겨 보던 우리 동네 헬스장 회원권은 저렴한 가격에 구매해보세요!</string>
    <string name="how_to_use_method2">거래 하기 전 상세 페이지에서 거래 방법을 확인하고\n거래 문의를 통해 판매자(구매자)와 거래를 진행해보세요.</string>
    <string name="how_to_use_method1">양도권 거래 방법은 현장결제와 선결제로 나눠져요.</string>
    <string name="how_to_use_careful1">구매 사기 예방을 위해 바통은 현장결제를 권장하는 편이에요. 거래하기 전 등록된 회원권 정보가 계약 내용과도 일치하는지 확인하면 더 안전한 거래를 할 수 있어요!</string>
    <string name="how_to_use_careful2">바통(주)는 통신판매 중개자로서 통신 판매의 당사자가 아닙니다. 본 양도권은 개별 판매자가 직접 등록한 양도권으로 회원권 정보, 양도 거래에 관한 의무와 책임은 각 판매자와 구매자에게 있습니다.</string>
    <string name="service_term_title"> 바통(주)는 통신판매 중개자로서 통신판매의 당사자가 아닙니다.\n본 양도권은 개별 판매자가 직접 등록한 양도권으로 회원권 정보,\n
        양도 거래에 관한 의무와 책임은 각 판매자에게 있습니다.</string>

    <!-- 문의하기 -->
    <string name="message_category">[%s]</string>
    <string name="message_checked">읽음</string>
    <string name="message_unChecked">안읽음</string>


</resources>